fjord-compiler/test/errors/polymorphism/InconsistentApply.fj
module errors.parametricPolymorhpism.InconsistentApply

import TestUtil

second : a. a -> a -> a
second x y =
  rm x y

five : Int
five = 
  second "hello" 5
